fix(table-tr-height): changed pf-m-no-wrap to pf-m-nowrap

--- a/src/patternfly/components/Table/table-grid.scss
+++ b/src/patternfly/components/Table/table-grid.scss
@@ -459,7 +459,7 @@
   }
 
   // No wrap
-  .pf-m-no-wrap {
+  .pf-m-nowrap {
     --pf-c-table--cell--Overflow: auto;
   }
 
